Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74978

When QT_SCALE_FACTOR is used for an application and the edit menu is shown in a TextArea then the selection handles are not correctly placed

XMLWordPrintable

    • iOS/tvOS/watchOS
    • b23f5621d7e5275dbb3f96f6b46f691c8b19a13d (qt/qtbase/dev)

      When QT_SCALE_FACTOR is used for an application and the edit menu is shown in a TextArea then the selection handles are not correctly placed. Everything else appears to scale correctly, but it has not taken into account the scaling in this respect.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sorvig Morten Sørvig
            andysh Andy Shaw
            Votes:
            3 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes